virt/krun-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const KRUN_LOG_TARGET_DEFAULT: i32 = -1;
pub const KRUN_LOG_LEVEL_OFF: u32 = 0;
pub const KRUN_LOG_LEVEL_ERROR: u32 = 1;
pub const KRUN_LOG_LEVEL_WARN: u32 = 2;
pub const KRUN_LOG_LEVEL_INFO: u32 = 3;
pub const KRUN_LOG_LEVEL_DEBUG: u32 = 4;
pub const KRUN_LOG_LEVEL_TRACE: u32 = 5;
pub const KRUN_LOG_STYLE_AUTO: u32 = 0;
pub const KRUN_LOG_STYLE_ALWAYS: u32 = 1;
pub const KRUN_LOG_STYLE_NEVER: u32 = 2;
pub const KRUN_LOG_OPTION_NO_ENV: u32 = 1;
pub const KRUN_FS_ROOT_TAG: &[u8; 10] = b"/dev/root\0";
pub const KRUN_DISK_FORMAT_RAW: u32 = 0;
pub const KRUN_DISK_FORMAT_QCOW2: u32 = 1;
pub const KRUN_DISK_FORMAT_VMDK: u32 = 2;
pub const KRUN_SYNC_NONE: u32 = 0;
pub const KRUN_SYNC_RELAXED: u32 = 1;
pub const KRUN_SYNC_FULL: u32 = 2;
pub const NET_FLAG_VFKIT: u32 = 1;
pub const NET_FLAG_DHCP_CLIENT: u32 = 2;
pub const KRUN_TSI_HIJACK_INET: u32 = 1;
pub const KRUN_TSI_HIJACK_UNIX: u32 = 2;
pub const NET_FEATURE_CSUM: u32 = 1;
pub const NET_FEATURE_GUEST_CSUM: u32 = 2;
pub const NET_FEATURE_GUEST_TSO4: u32 = 128;
pub const NET_FEATURE_GUEST_TSO6: u32 = 256;
pub const NET_FEATURE_GUEST_UFO: u32 = 1024;
pub const NET_FEATURE_HOST_TSO4: u32 = 2048;
pub const NET_FEATURE_HOST_TSO6: u32 = 4096;
pub const NET_FEATURE_HOST_UFO: u32 = 16384;
pub const COMPAT_NET_FEATURES: u32 = 19587;
pub const VIRGLRENDERER_USE_EGL: u32 = 1;
pub const VIRGLRENDERER_THREAD_SYNC: u32 = 2;
pub const VIRGLRENDERER_USE_GLX: u32 = 4;
pub const VIRGLRENDERER_USE_SURFACELESS: u32 = 8;
pub const VIRGLRENDERER_USE_GLES: u32 = 16;
pub const VIRGLRENDERER_USE_EXTERNAL_BLOB: u32 = 32;
pub const VIRGLRENDERER_VENUS: u32 = 64;
pub const VIRGLRENDERER_NO_VIRGL: u32 = 128;
pub const VIRGLRENDERER_USE_ASYNC_FENCE_CB: u32 = 256;
pub const VIRGLRENDERER_RENDER_SERVER: u32 = 512;
pub const VIRGLRENDERER_DRM: u32 = 1024;
pub const KRUN_MAX_DISPLAYS: u32 = 16;
pub const KRUN_KERNEL_FORMAT_RAW: u32 = 0;
pub const KRUN_KERNEL_FORMAT_ELF: u32 = 1;
pub const KRUN_KERNEL_FORMAT_PE_GZ: u32 = 2;
pub const KRUN_KERNEL_FORMAT_IMAGE_BZ2: u32 = 3;
pub const KRUN_KERNEL_FORMAT_IMAGE_GZ: u32 = 4;
pub const KRUN_KERNEL_FORMAT_IMAGE_ZSTD: u32 = 5;
pub const KRUN_FEATURE_NET: u32 = 0;
pub const KRUN_FEATURE_BLK: u32 = 1;
pub const KRUN_FEATURE_GPU: u32 = 2;
pub const KRUN_FEATURE_SND: u32 = 3;
pub const KRUN_FEATURE_INPUT: u32 = 4;
pub const KRUN_FEATURE_EFI: u32 = 5;
pub const KRUN_FEATURE_TEE: u32 = 6;
pub const KRUN_FEATURE_AMD_SEV: u32 = 7;
pub const KRUN_FEATURE_INTEL_TDX: u32 = 8;
pub const KRUN_FEATURE_AWS_NITRO: u32 = 9;
pub const KRUN_FEATURE_VIRGL_RESOURCE_MAP2: u32 = 10;
pub const KRUN_FEATURE_INIT_BLOB: u32 = 11;
pub type __uint32_t = ::core::ffi::c_uint;
pub type __darwin_gid_t = __uint32_t;
pub type __darwin_uid_t = __uint32_t;
pub type uid_t = __darwin_uid_t;
pub type gid_t = __darwin_gid_t;
unsafe extern "C" {
    #[doc = " Sets the log level for the library.\n\n Arguments:\n  \"level\" can be one of the following values:\n    0: Off\n    1: Error\n    2: Warn\n    3: Info\n    4: Debug\n    5: Trace\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_log_level(level: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Initializes logging for the library.\n\n Arguments:\n  \"target_fd\" - File descriptor to write log to. Note that using a file descriptor pointing to a regular file on\n                filesystem might slow down the VM.\n                Use KRUN_LOG_TARGET_DEFAULT to use the default target for log output (stderr).\n\n  \"level\"     - Level is an integer specifying the level of verbosity, higher number means more verbose log.\n                The log levels are described by the constants: KRUN_LOG_LEVEL_{OFF, ERROR, WARN, INFO, DEBUG, TRACE}\n\n  \"style\"     - Enable/disable usage of terminal escape sequences (to display colors)\n                One of: KRUN_LOG_STYLE_{AUTO, ALWAYS, NEVER}.\n\n  \"options\"   - Bitmask of logging options, use 0 for default options.\n                KRUN_LOG_OPTION_NO_ENV to disallow environment variables to override these settings.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_init_log(
        target_fd: ::core::ffi::c_int,
        level: u32,
        style: u32,
        options: u32,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Creates a configuration context.\n\n Returns:\n  The context ID on success or a negative error number on failure."]
    pub fn krun_create_ctx() -> i32;
}
unsafe extern "C" {
    #[doc = " Frees an existing configuration context.\n\n Arguments:\n  \"ctx_id\" - the configuration context ID.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_free_ctx(ctx_id: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the basic configuration parameters for the microVM.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"num_vcpus\" - the number of vCPUs.\n  \"ram_mib\"   - the amount of RAM in MiB.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_vm_config(ctx_id: u32, num_vcpus: u8, ram_mib: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the path to be use as root for the microVM. Not available in libkrun-SEV.\n\n For more control over the root filesystem (e.g. read-only, DAX window size),\n use krun_add_virtiofs3() with KRUN_FS_ROOT_TAG instead.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"root_path\" - a null-terminated string representing the path to be used as root.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_root(ctx_id: u32, root_path: *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " DEPRECATED. Use krun_add_disk instead.\n\n Sets the path to the disk image that contains the file-system to be used as root for the microVM.\n The only supported image format is \"raw\".\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"disk_path\" - a null-terminated string representing the path leading to the disk image that\n                contains the root file-system.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_root_disk(ctx_id: u32, disk_path: *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " DEPRECATED. Use krun_add_disk instead.\n\n Sets the path to the disk image that contains the file-system to be used as\n a data partition for the microVM.  The only supported image format is \"raw\".\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"disk_path\" - a null-terminated string representing the path leading to the disk image that\n                contains the root file-system.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_data_disk(ctx_id: u32, disk_path: *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds a disk image to be used as a general partition for the microVM. The only supported image\n format is \"raw\".\n\n This API is mutually exclusive with the deprecated krun_set_root_disk and\n krun_set_data_disk methods and must not be used together.\n\n This function deliberately only handles images in the Raw format, because it doesn't allow\n specifying an image format, and probing an image's format is dangerous. For more information,\n see the security note on `krun_add_disk2`, which allows opening non-Raw images.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"block_id\"  - a null-terminated string representing the partition.\n  \"disk_path\" - a null-terminated string representing the path leading to the disk image.\n  \"read_only\" - whether the mount should be read-only. Required if the caller does not have\n                write permissions (for disk images in /usr/share).\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_disk(
        ctx_id: u32,
        block_id: *const ::core::ffi::c_char,
        disk_path: *const ::core::ffi::c_char,
        read_only: bool,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds a disk image to be used as a general partition for the microVM. The supported\n image formats are: \"raw\" and \"qcow2\".\n\n This API is mutually exclusive with the deprecated krun_set_root_disk and\n krun_set_data_disk methods and must not be used together.\n\n SECURITY NOTE:\n Non-Raw images can reference other files, which libkrun will automatically open, and to which the\n guest will have access. Libkrun should therefore never be asked to open an image in a non-Raw\n format when it doesn't come from a fully trustworthy source.\n\n Consequently, probing an image's format is quite dangerous and to be avoided if at all possible,\n which is why libkrun provides no facilities for doing so. If it's not clear what format an image\n has, it may also not be clear whether it can be trusted to not reference files to which the guest\n shouldn't have access.\n\n If probing absolutely can't be avoided, it must only be done on images that are fully trusted, i.e.\n before a potentially untrusted guest had write access to it. Specifically, consider that a guest has\n full access to all of a Raw image, and can therefore turn it into a file in an arbitrary format, for\n example, into a Qcow2 image, referencing and granting a malicious guest access to arbitrary files.\n To hand a Raw image to an untrusted and potentially malicious guest, and then to re-probe it after\n the guest was able to write to it (when it can no longer be trusted), would therefore be a severe\n security vulnerability.\n\n Therefore, after having probed a yet fully trusted image once, the result must be remembered so the\n image will from then on always be opened in the format that was detected originally. When adhering\n to this, a guest can write anything they want to a Raw image, it's always going to be opened as a\n Raw image, preventing the security vulnerability outlined above.\n\n However, if at all possible, the image format should be explicitly selected based on knowledge\n obtained separately from the pure image data, for example by the user.\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"block_id\"    - a null-terminated string representing the partition.\n  \"disk_path\"   - a null-terminated string representing the path leading to the disk image.\n  \"disk_format\" - the disk image format (i.e. KRUN_DISK_FORMAT_{RAW, QCOW2})\n  \"read_only\"   - whether the mount should be read-only. Required if the caller does not have\n                  write permissions (for disk images in /usr/share).\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_disk2(
        ctx_id: u32,
        block_id: *const ::core::ffi::c_char,
        disk_path: *const ::core::ffi::c_char,
        disk_format: u32,
        read_only: bool,
    ) -> i32;
}
